<resources>
    <string name="AppRestart_SettingsChanged_Action_RestartApp">Restart app</string>
    <string name="AppRestart_SettingsChanged_Message_OutOfSync">Client and server are out of sync!</string>
    <string name="Application_AppRating_Action_RatingNegativeButton">Not now</string>
    <string name="Application_AppRating_Action_RatingRemindMeLater">Remind me later.</string>
    <string name="Application_AppRating_Label_AppRatingDialogCloseButtonText">X</string>
    <string name="Application_AppRating_Label_PleaseRate">Please rate us!</string>
    <string name="Application_AppRating_Label_RatingMessage">If you’re enjoying Roblox please rate our app.</string>
    <string name="Application_AppRating_Label_RatingYes">Yes</string>
    <string name="Application_AppRating_Response_CouldNotLaunchPlayStore">Could not launch Play Store!</string>
    <string name="Application_ConnectionError_Dialog_Title">Connection error</string>
    <string name="Application_Leave_Action_LeaveApp">Leave App</string>
    <string name="Application_Leave_Response_LeaveAppConfirmation">Do you want to leave the app?</string>
    <string name="Application_Logout_Action_Logout">Log Out</string>
    <string name="Application_Logout_Response_LogoutConfirmation">Do you want to log out?</string>
    <string name="Application_Logout_Response_SorryLoggedOut">Sorry! You are logged out.</string>
    <string name="Application_Upgrade_Action_NotNow">Not now</string>
    <string name="Application_Upgrade_Action_Upgrade">Upgrade</string>
    <string name="Application_Upgrade_Apk_Downaloding_Title">Downloading App</string>
    <string name="Application_Upgrade_Apk_Download_Error">Upgrade APK download failed</string>
    <string name="Application_Upgrade_Apk_Download_Error_Message">Please check the internet connection for downloading the new APK.</string>
    <string name="Application_Upgrade_Apk_Download_Error_Notification_Message">Please check the internet connection for downloading the new APK. Click to retry.</string>
    <string name="Application_Upgrade_Apk_Download_Error_Retry">Try Again</string>
    <string name="Application_Upgrade_Apk_External_Storage_Permission_Message" />
    <string name="Application_Upgrade_Apk_External_Storage_Permission_Title" />
    <string name="Application_Upgrade_Apk_Install_Permission">Before we get started, you might have to click the SETTINGS and Allow app installs.</string>
    <string name="Application_Upgrade_Response_Title">Roblox Upgrade</string>
    <string name="Application_Upgrade_Response_UpgradeBodyString">Your version of Roblox is out of date and will not work properly. Taking you to the %1$s for an upgrade.</string>
    <string name="Application_Upgrade_URL_invalid">APK URL error.</string>
    <string name="Authentication_Captcha_Action_Reload">Reload</string>
    <string name="Authentication_Captcha_Action_Submit">Submit</string>
    <string name="Authentication_Captcha_Description_CaptchaHint">Type the text</string>
    <string name="Authentication_Captcha_Heading_CaptchaTitle">Please Complete Captcha Challenge</string>
    <string name="Authentication_Captcha_Label_VerifyHuman">Before you continue, we need to verify you are human. Please fill out form below.</string>
    <string name="Authentication_Captcha_Response_CaptchaFailed">Captcha Failed</string>
    <string name="Authentication_Captcha_Response_CaptchaFailedToLoad">Failed to load Captcha - please try restarting the app.</string>
    <string name="Authentication_Login_Action_Cancel">Cancel</string>
    <string name="Authentication_Login_Action_Continue">Continue</string>
    <string name="Authentication_Login_Action_ForgotPassword">Forgot password</string>
    <string name="Authentication_Login_Action_ForgotPasswordOrUsernameQuestion">Forgot password or username?</string>
    <string name="Authentication_Login_Action_ForgotUsernamePassword">Forgot username/password</string>
    <string name="Authentication_Login_Action_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Action_Login">Login</string>
    <string name="Authentication_Login_Action_PlayNow">Play Now</string>
    <string name="Authentication_Login_Action_QQLogin">QQ Login</string>
    <string name="Authentication_Login_Action_SignUp">Sign up</string>
    <string name="Authentication_Login_Action_WeChatLogin">WeChat Login</string>
    <string name="Authentication_Login_Description_CancelButtonContentDesc">loginCancelButton</string>
    <string name="Authentication_Login_Description_LoginButtonContentDesc">loginLoginButton</string>
    <string name="Authentication_Login_Description_PasswordContentDescription">loginPassword</string>
    <string name="Authentication_Login_Description_UsernameContentDescription">loginUsername</string>
    <string name="Authentication_Login_Label_AcceptTermsOfUseAndPrivacyPolicy">By clicking I Agree, you are agreeing to the %1$s and %2$s.</string>
    <string name="Authentication_Login_Label_DontHaveAnAccount">"Don't have an account?"</string>
    <string name="Authentication_Login_Label_IAgree">I AGREE</string>
    <string name="Authentication_Login_Label_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Label_LoggingIn">Logging in</string>
    <string name="Authentication_Login_Label_LoggingInSpinnerText">Logging in…</string>
    <string name="Authentication_Login_Label_Login">Log in</string>
    <string name="Authentication_Login_Label_Login_Uppercase">LOGIN</string>
    <string name="Authentication_Login_Label_NotAMember">Not a member?</string>
    <string name="Authentication_Login_Label_Password">Password</string>
    <string name="Authentication_Login_Label_QQ">QQ</string>
    <string name="Authentication_Login_Label_RealNameAuthentication">Real Name Authentication</string>
    <string name="Authentication_Login_Label_RealNameVerification">"Your real name authentication information has already been stored in Tencent's real name authentication database. You may now continue to log in and play Tencent Games."</string>
    <string name="Authentication_Login_Label_TencentAntiAddictionText">Boycott bad games, refuse pirated games. Be aware of self-defense and being deceived. Playing games is good for your brain, but too much game play can harm your health. Manage your time well and enjoy a healthy lifestyle.</string>
    <string name="Authentication_Login_Label_TencentAuthenticating">Authenticating...</string>
    <string name="Authentication_Login_Label_TencentNotInstalled">%1$s is not installed.</string>
    <string name="Authentication_Login_Label_TencentPleaseWait">Please wait.</string>
    <string name="Authentication_Login_Label_TencentUserCancel">You are logged out of %1$s. Please log in to %1$s.</string>
    <string name="Authentication_Login_Label_TencentVersionNotSupported">%1$s version is not supported.</string>
    <string name="Authentication_Login_Label_TermsOfService">Terms of Service</string>
    <string name="Authentication_Login_Label_TermsOfServiceAndPrivacyPolicyText">"I have read and agreed to Tencent Games' %1$s and %2$s."</string>
    <string name="Authentication_Login_Label_TermsOfUseChanged">TERMS OF USE HAVE CHANGED</string>
    <string name="Authentication_Login_Label_ThankYou">Thank you for using our game.</string>
    <string name="Authentication_Login_Label_Username">Username</string>
    <string name="Authentication_Login_Label_UsernameEmail">Username/Email</string>
    <string name="Authentication_Login_Label_UsernameEmailPhone">Username/Email/Phone</string>
    <string name="Authentication_Login_Label_UsernamePhone">Username/Phone</string>
    <string name="Authentication_Login_Label_WeChat">WeChat</string>
    <string name="Authentication_Login_Response_AccountAlreadyConnected">This Account is already connected to a Roblox Account.</string>
    <string name="Authentication_Login_Response_AccountIssueErrorContactSupport">Account issue. Please contact Support.</string>
    <string name="Authentication_Login_Response_ErrorLoginWithUsername">Something went wrong. Please login with your username.</string>
    <string name="Authentication_Login_Response_FloodCheckError">"You've exceeded the maximum number of attempts. Please try again later."</string>
    <string name="Authentication_Login_Response_ForgotPasswordOrUsername">Forgot username/password</string>
    <string name="Authentication_Login_Response_GenericError">Something went wrong. Please try again.</string>
    <string name="Authentication_Login_Response_GlobalAppAccessError">The account is unable to log in. Please log in to the LuoBu app.</string>
    <string name="Authentication_Login_Response_IncorrectCredentialsForgotPasswordMessage">Your credentials are incorrect. Please double check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectEmailOrPasswordMessage">Your password or email is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectEmailPassword">Incorrect email or password.</string>
    <string name="Authentication_Login_Response_IncorrectPhoneOrPasswordMessage">Your password or phone is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectPhonePassword">Incorrect phone or password.</string>
    <string name="Authentication_Login_Response_IncorrectUsernameOrPasswordMessage">Your password or username is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectUsernamePassword">Incorrect username or password.</string>
    <string name="Authentication_Login_Response_InvalidPassword">Your username or password is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_LoginIssueErrorContactSupport">Login issue. Please contact support.</string>
    <string name="Authentication_Login_Response_LuoBuAccount">The account is unable to log in. Please log in to the LuoBu app.</string>
    <string name="Authentication_Login_Response_MissingUsernamePasswordError">Missing username or password.</string>
    <string name="Authentication_Login_Response_MultipleAccountEmailLoginWithUsername">Your email is associated with more than 1 username. Please login with your username.</string>
    <string name="Authentication_Login_Response_PleaseAcceptTerms">Please accept terms below before proceeding.</string>
    <string name="Authentication_Login_Response_PleaseEnterPassword">Please enter a password.</string>
    <string name="Authentication_Login_Response_PleaseEnterUsername">Please enter a username.</string>
    <string name="Authentication_Login_Response_PleaseTryAgain">Please try again</string>
    <string name="Authentication_Login_Response_SessionExpiredLoginAgain">Your session has expired. Please login again.</string>
    <string name="Authentication_Login_Response_SystemError">System error. Please try again later.</string>
    <string name="Authentication_SignUp_Description_PasswordHintTextLong">Password (4 letters and 2 numbers min.)</string>
    <string name="Authentication_SignUp_Description_SignUpPasswordContentDesc">signupPassword</string>
    <string name="Authentication_SignUp_Description_SignUpUsernameContentDesc">signupUsername</string>
    <string name="Authentication_SignUp_Description_Username">Username</string>
    <string name="Authentication_SignUp_Description_UsernameHintTextLong">Username (6-20 characters, no spaces)</string>
    <string name="Authentication_SignUp_Label_CreateAccount">Create an Account</string>
    <string name="Authentication_SignUp_Label_SignUp">Sign Up</string>
    <string name="Authentication_SignUp_Response_UsernameContainsInvalidCharacters">Username contains invalid characters.</string>
    <string name="CommonUI_Messages_Label_Password">Password</string>
</resources>