<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/birthdate"
    android:background="@color/activityBackground"
    android:paddingLeft="20.0dip"
    android:paddingTop="14.0dip"
    android:paddingRight="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingStart="20.0dip"
    android:paddingEnd="20.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0.0px"
        android:layout_height="0.0px" />
    <com.roblox.client.components.RbxTextView
        android:textSize="@dimen/textSizeSignupHeader"
        android:textStyle="bold"
        android:textColor="@color/RbxBlack"
        android:layout_gravity="center_horizontal"
        android:id="@id/fragment_sign_up_gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/fragment_sign_up_final_username_layout"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip">
        <com.roblox.client.components.RbxTextView
            android:textSize="16.0sp"
            android:textColor="@color/RbxBlack"
            android:id="@id/fragment_sign_up_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip" />
        <com.roblox.client.signup.UsernameSignUpEditText
            android:id="@id/fragment_sign_up_username"
            android:layout_width="fill_parent"
            android:layout_height="90.0dip"
            android:layout_marginTop="10.0dip"
            android:contentDescription="@string/Authentication_SignUp_Description_SignUpUsernameContentDesc"
            app:errorText="@string/Authentication_SignUp_Response_UsernameContainsInvalidCharacters"
            app:hintText="@string/Authentication_SignUp_Description_Username"
            app:hintTextLong="@string/Authentication_SignUp_Description_UsernameHintTextLong"
            app:inputType="textNoSuggestions"
            style="@style/Theme.Roblox.EditText" />
    </LinearLayout>
    <com.roblox.client.components.RbxTextView
        android:textSize="16.0sp"
        android:textColor="@color/RbxBlack"
        android:id="@id/fragment_sign_up_gender_field_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip" />
    <com.roblox.client.components.RbxGenderPicker
        android:id="@id/fragment_sign_up_gender_picker"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="90.0dip"
        android:layout_marginTop="10.0dip"
        style="@style/Theme.Roblox.StandardFontLight" />
    <com.roblox.client.components.RbxProgressButton
        android:id="@id/fragment_sign_up_username_start_button"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="15.0dip"
        app:buttonTextSize="@dimen/textSizeBtnSubmit"
        app:progressTextSize="@dimen/textSizeBtnSubmitProgress"
        style="@style/Theme.Roblox.Progress.Button.Blue" />
    <Space
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
    <com.roblox.client.components.RbxButton
        android:textSize="@dimen/textSizeLoginFinePrint"
        android:textColor="@color/RbxBlue2"
        android:layout_gravity="center_horizontal"
        android:id="@id/fragment_sign_up_username_skip_button"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40.0dip" />
</LinearLayout>